--- a/2.Mysql数据库约定规范.md
+++ b/2.Mysql数据库约定规范.md
@@ -218,11 +218,8 @@ pt-online-schema-change它会首先建立一个与原表结构相同的新表，
 【说明】程序使用数据库账号只能在一个DB下使用，不准跨库 程序使用的账号原则上不准有drop权限。、
 
 
-##
-####维护小组成员：
-李俊超 
+## 
 
-####贡献者： 
-##### 郝海民 
-##### 李华栋
+#### 贡献者： 
+#### 李俊超  郝海民  李华栋
 
