--- a/4.系统异常及状态码约定规范.md
+++ b/4.系统异常及状态码约定规范.md
@@ -160,9 +160,10 @@
 
 
 ### 参考：
-      淘宝开放平台公共返回码说明
+      淘宝开放平台公共返回码说明[https://developer.alibaba.com/docs/doc.htm?articleId=112813&docType=1]
       Error code - 微博API
       百度Open API错误码定义
+      公共错误码| 微信开放文档 [https://developers.weixin.qq.com/doc/oplatform/Return_codes/Return_code_descriptions_new.html]
 
 
 
